feat(promo): simplify parameter handling in PromoView by removing unused CampaignService and optimizing opponentId retrieval